testing new files by amay config

--- a/core.entity_form_display.node.news.default.yml
+++ b/core.entity_form_display.node.news.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.news.body
+    - field.field.node.news.field_a
     - field.field.node.news.field_test
     - node.type.news
   module:
@@ -29,6 +30,14 @@ content:
     weight: 10
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_a:
+    type: string_textfield
+    weight: 123
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   field_test:
     type: string_textfield
