--- a/core.entity_view_display.node.news.teaser.yml
+++ b/core.entity_view_display.node.news.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
+    - field.field.node.news.field_a
     - field.field.node.news.field_test
     - node.type.news
   module:
@@ -29,4 +30,5 @@ content:
     weight: 100
     region: content
 hidden:
+  field_a: true
   field_test: true
